--- a/ERP/ERP.Web/Areas/Marketing/Views/MKGiaoViec/Index.cshtml
+++ b/ERP/ERP.Web/Areas/Marketing/Views/MKGiaoViec/Index.cshtml
@@ -31,6 +31,8 @@
             background-color: #00A2D8;
             color: #fff;
             font-weight: bold;
+            height: 30px;
+            
         }
 </style>
 <style>
@@ -48,12 +50,55 @@
     margin-top: -50px;
     padding-top: -100px;
     border-radius: 17px;
-    background-color: #4ADFCC;
+    background-color: #2DAACD;
     margin-top: 25px;
+    font-weight: bold;
+    text-align: center;
     color:white;
     width: 100%;
-    box-shadow: 2px 2px 2px 2px #E0E0E0;
+    box-shadow: 2px 2px 2px 2px #E0E0E0; 
+}
+.quote-box-1{
     
+    overflow: hidden;
+    margin-top: -50px;
+    padding-top: -100px;
+    border-radius: 17px;
+    background-color: #378463;
+    margin-top: 25px;
+    font-weight: bold;
+    text-align: center;
+    color:white;
+    width: 100%;
+    box-shadow: 2px 2px 2px 2px #E0E0E0; 
+}
+.quote-box-2{
+    
+    overflow: hidden;
+    margin-top: -50px;
+    padding-top: -100px;
+    border-radius: 17px;
+    background-color: #00ACED;
+    margin-top: 25px;
+    font-weight: bold;
+    text-align: center;
+    color:white;
+    width: 100%;
+    box-shadow: 2px 2px 2px 2px #E0E0E0; 
+}
+.quote-box-3{
+    
+    overflow: hidden;
+    margin-top: -50px;
+    padding-top: -100px;
+    border-radius: 17px;
+    background-color: #4ADFCC;
+    margin-top: 25px;
+    font-weight: bold;
+    text-align: center;
+    color:white;
+    width: 100%;
+    box-shadow: 2px 2px 2px 2px #E0E0E0; 
 }
 
 .quotation-mark{
@@ -75,24 +120,72 @@
     background-color: #1191BF;
     font-weight: bold;
     color: #fff;
-    height: 30px;
+    height: 40px;
+    padding-top: 11px;
 }
-.col-md-4{
-    padding-left: 0px !important;
-    padding-right: 0px !important;
+.option_box_nv{
+
 }
+.panel-heading {
+        margin: auto;
+        text-align: center;
+        color: #1191BF;
+        font-size: 20px;
+        background-color: #f5f5f5;
+        border-color: #ddd;
+        width: 100%;
+    }
+.option_box_nv{
+    margin-top: 25px;
+    height: 640px;
+    overflow: auto;
+    border: 1px solid #f0f0f0;
+    width: 32%;
+    margin-left: 15px;
+    padding: 0px;
+}
+input[type=text] {
+    width: 130px;
+    box-sizing: border-box;
+    border: 1px solid #D3D3D3;
+    border-radius: 4px;
+    font-size: 14px;
+    color: #fff;
+    background-color: transparent;
+    background-position: 10px 10px; 
+    background-repeat: no-repeat;
+    -webkit-transition: width 0.4s ease-in-out;
+    transition: width 0.4s ease-in-out;
+    float:right;
+    margin-right: 5px;
+}
+
+input[type=text]:focus {
+    width: 100%;
+    
+}
+
 </style>
+<div class="panel-heading">
+    <marquee width="80%">Bạn đang xem danh mục giao việc</marquee>
+</div>
 <div ng-controller="MKGiaoViecCtrl" ng-app="myApp">
     <input type="hidden" value="@Session["USERNAME"]" id="username"/>
     <input type="hidden" value="@Session["IS_AMIN"]" id="isadmin" />
-    <div class="col-md-4" style="margin-top: 25px;">
-
-        <select size="10" name="decision2" style="height: 500px;" class="col-md-12">
-            <option class="option_box">Danh sách nhân viên</option>
-            <option ng-repeat="item in list_nhanvienHL" class="option" style="height:30px;margin-left: 15px;margin-bottom: 15px;vertical-align:middle;padding-top: 5px;" ng-click="transfer(item)">{{item.HO_VA_TEN}}</option>
-        </select>
-
-        <button type="button" ng-click="giaoviec()" class="btn btn-default" style="margin-top: 20px;">Giao việc</button>
+    <div class="col-md-4 option_box_nv">
+        @*<select size="10" name="decision2" style="height: 640px;" class="col-md-12">
+            <option class="option_box"></option>
+            <option ng-repeat="item in list_nhanvienHL" class="option" style="height:30px;margin:15px 15px;vertical-align:middle;padding-top: 5px; border-bottom: 1px solid #f0f0f0;" ng-click="transfer(item)">{{item.HO_VA_TEN}}</option>
+        </select>*@
+            <table class="col-md-12">
+                <tr style="height: 40px; background-color: #1191BF; padding: 0px;">
+                    <td style="color:#fff; font-weight:bold; padding-left: 15px !important;">DANH SÁCH NHÂN VIÊN</td>
+                    <td><input type="text" name="search" value="Search..."></td>
+                </tr>
+                <tr class="option" ng-repeat="item in list_nhanvienHL" class="option" style="height:30px;margin:15px 15px;vertical-align:middle;padding-top: 5px; border-bottom: 1px solid #f0f0f0;" ng-click="transfer(item)">
+                    <td colspan="2" style="padding-left: 30px; padding-top: 16px;">{{item.HO_VA_TEN}}</td>
+                </tr>
+            </table>
     </div>
     <div class="col-md-8">
         <div class="row">
@@ -109,7 +202,7 @@
                 </blockquote>
             </div>
             <div class="col-md-6">
-                <blockquote class="quote-box">
+                <blockquote class="quote-box-1">
                     <p>
                         Nhiệm vụ của phòng ban : {{item.TEN_PHONG_BAN}}
                     </p>
@@ -125,7 +218,7 @@
         </div>
         <div class="row">
             <div class="col-md-6">
-                <blockquote class="quote-box">
+                <blockquote class="quote-box-2">
                     <p>
                         Nhiệm vụ công việc của : {{item.HO_VA_TEN}}
                     </p>
@@ -139,7 +232,7 @@
                 </blockquote>
             </div>
             <div class="col-md-6">
-                <blockquote class="quote-box">
+                <blockquote class="quote-box-3">
                     <p>
                         Mục tiêu công việc của : {{item.HO_VA_TEN}}
                     </p>
@@ -168,4 +261,5 @@
             });
         </script>
     </div>
+    <center><button type="button" ng-click="giaoviec()" class="btn fa fa-arrow-up" style="margin-top: 20px; text-align: center;">Giao việc</button></center>
 </div>
