--- a/ERP/ERP.Web/Views/ThongBao/Index.cshtml
+++ b/ERP/ERP.Web/Views/ThongBao/Index.cshtml
@@ -1,8 +1,38 @@
 ﻿<link href="~/Content/self-writing/css/ThongBao.css" rel="stylesheet" />
 <script src="~/Content/self-writing/js/Controllers/ThongBao/ThongBaoCtrl.js"></script>
-<div class="panel-heading">Thông báo của @Session["HO_VA_TEN"]</div>
+<link href="~/Content/self-writing/css/ThongBao.css" rel="stylesheet" />
+<style>
+    /* Let's get this party started */
+    ::-webkit-scrollbar {
+        width: 5px;
+    }
+
+    /* Track */
+    ::-webkit-scrollbar-track {
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+    }
+
+    /* Handle */
+    ::-webkit-scrollbar-thumb {
+        -webkit-border-radius: 10px;
+        border-radius: 10px;
+        background: #00BFFF;
+        -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5);
+    }
+
+        ::-webkit-scrollbar-thumb:window-inactive {
+            background: #00BFFF;
+        }
+</style>
+
+<div class="panel-heading">
+    <marquee width="80%">Thông báo của @Session["HO_VA_TEN"]</marquee>
+</div>
 <br />
 <br />
+
 <div class="container" ng-app="myApp" ng-controller="ThongBaoCtrl">
     <div style="box-shadow: 4px 4px 12px #888888;padding: 0px 0px 0px 10px; background-color: whitesmoke;">
         <div class="center" style="margin-left: 87px;">
@@ -25,7 +55,7 @@
                     </blockquote>
                 </div>
                 <div class="col-md-6">
-                    <blockquote class="quote-box" ng-repeat="item in ListThongBaoPB">
+                    <blockquote class="quote-box-1" ng-repeat="item in ListThongBaoPB">
                         <p>
                             {{item.HO_VA_TEN}}
                         </p>
@@ -41,7 +71,7 @@
             </div>
             <div class="row" ng-repeat="item in ListThongBaoNV">
                 <div class="col-md-6">
-                    <blockquote class="quote-box">
+                    <blockquote class="quote-box-2">
                         <p>
                             {{item.HO_VA_TEN}}
                         </p>
@@ -56,7 +86,7 @@
                     </blockquote>
                 </div>
                 <div class="col-md-6">
-                    <blockquote class="quote-box">
+                    <blockquote class="quote-box-3">
                         <p>
                             {{item.HO_VA_TEN}}
                         </p>
@@ -71,13 +101,3 @@
             </div>
         </div></div>
 </div>
-<style>
-    .panel-heading {
-    margin: auto;
-    width: 40%;
-    text-align: center;
-    color: #333;
-    background-color: #f5f5f5;
-    border-color: #ddd;
-}
-</style>
