--- a/ERP/ERP.Web/Views/LichLamViecNhanVien/Index.cshtml
+++ b/ERP/ERP.Web/Views/LichLamViecNhanVien/Index.cshtml
@@ -236,12 +236,86 @@
             </div>
         </div>
 
+        <div class="modal fade" id="newcongviec" role="dialog">
+            <div class="modal-dialog modal-lg">
+                <div class="modal-content">
+
+                    <div class="modal-body">
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Tiêu đề công việc: </label>
+                            <div class="col-md-10">
+                                <input type="text" placeholder="Tiêu đề công việc" class="form-control input-md" ng-model="tieu_de_cong_viec_giao_viec">
+                            </div>
+                        </div>
+                        <!-- Text input-->
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Nội dung công việc: </label>
+                            <div class="col-md-10">
+                                <textarea type="text" placeholder="Nội dung công việc" class="form-control input-md" ng-model="noi_dung_cong_viec_giao_viec"></textarea>
+                            </div>
+                        </div>
+                        <!-- Text input-->
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Thời gian hoàn thành : </label>
+                            <div class="col-md-10">
+                                <input type="text" placeholder="Thời gian hoàn thành" class="form-control input-md" ng-model="thoi_gian_hoan_thanh_giao_viec">
+                            </div>
+                        </div>
+                        <!-- Text input-->
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Nhân viên thực hiện: </label>
+                            <div class="col-md-8">
+                                <input type="text" ng-model="ho_va_ten" ng-change="onNVFind()" ng-focus="showtable_NV = true" ng-blur="showtable_NV = false" style="border: 1px solid #F0F0F0 !important;width: 100%;border-radius: 0px !important">
+                                <input type="text" class="form-control" ng-model="username" style="display:none">
+                                <div class="input-group-btn">
+                                    <div class="dropdown-menu dropdown-menu-center borderRadius0 padding0" style="display: block;height: 400px;overflow:auto;" ng-show="showtable_NV">
+                                        <div class="table-responsive">
+                                            <table class="table table-striped table-hover" st-table="NVCollection" st-safe-src="arrayNVFinded">
+                                                <thead class="bg-blue text-white">
+                                                    <tr>
+                                                        <th>Tên nhân viên</th>
+                                                        <th>Mã nhân viên</th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody>
+                                                    <tr style="cursor:pointer" ng-mousedown="showInfoNV(Lh)" ng-repeat="Lh in NVCollection">
+                                                        <td>{{Lh.HO_VA_TEN}}</td>
+                                                        <td>{{Lh.USERNAME}}</td>
+                                                    </tr>
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Trạng thái </label>
+                            <div class="col-md-10">
+                                <input type="text" placeholder="Trạng thái" class="form-control input-md" ng-model="trang_thai_giao_viec">
+                            </div>
+                        </div>
+                        <div class="form-group col-md-12">
+                            <label class="col-md-2 control-label" for="name">Ghi chú: </label>
+                            <div class="col-md-10">
+                                <input type="text" placeholder="Ghi chú" class="form-control input-md" ng-model="ghi_chu_giao_viec">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button id="delete" name="delete" class="btn" ng-click="newgiaoviec()" data-dismiss="modal">Lưu</button>
+                        <button id="exit" name="exit" class="btn" data-dismiss="modal">Exit</button>
+                    </div>
+                </div>
+            </div>
+        </div>
 
         <!--Danh sách Công việc được giao-->
         <div class="panel panel-default">
             <div class="panel-heading" style="height: 40px;">
                 <div class="panel-title">
                     <div style="float: left">Công việc được giao</div>
+                    <div style="float: right" data-toggle="modal" data-target="#newcongviec">Công việc được giao</div>
                 </div>
             </div>
             <div class="panel-body">
